--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,26 @@
 version: '2.1'
 services:
+  samba:
+    # Updated due to a documented bug in alpine linux https://gitlab.alpinelinux.org/alpine/aports/-/issues/12346
+    container_name: samba
+    image: dperson/samba:rpi
+    environment:
+      USERID: 1000
+      GROUPID: 1001
+      TZ: America/Santiago
+    ports:
+      - "139:139/tcp"
+      - "445:445/tcp"
+    restart: unless-stopped
+    stdin_open: true
+    tty: true
+    volumes:
+      - /mnt/nas:/media
+    command: -u "nas;media" -s "media;/media;yes;no;no;nas;nas;nas"
   portainer:
     image: portainer/portainer
     container_name: portainer
+    command: -H unix:///var/run/docker.sock
     restart: always
     ports:
       - 8000:8000
@@ -22,7 +40,7 @@ services:
       - HOMEBRIDGE_CONFIG_UI=1
       - HOMEBRIDGE_CONFIG_UI_PORT=8080
     volumes:
-      - ./.homebridge:/homebridge
+      - ~/.homebridge:/homebridge
   transmission:
     image: linuxserver/transmission
     container_name: transmission
@@ -34,7 +52,7 @@ services:
       - USER=nas #optional
       - PASS=media #optional
     volumes:
-      - /home/hugo/.config/transmission-daemon:/config
+      - ~/.config/transmission-daemon:/config
       - /mnt/nas/downloads:/downloads
         #- path to watch folder:/watch
     ports:
@@ -42,21 +60,6 @@ services:
       - 51413:51413
       - 51413:51413/udp
     restart: unless-stopped
-  samba:
-    image: dperson/samba:latest
-    container_name: samba
-    command: '-u "nas;media" -s "media;/media;yes;no;no;nas,nas,nas" -p'
-    restart: unless-stopped
-    stdin_open: true
-    tty: true
-    environment:
-      - USERID=1000
-    ports:
-      - 139:130
-      - 445:445
-    volumes:
-      - /mnt/nas:/media
-      - /usr/share/zoneinfo/America/Santiago:/etc/localtime
   minidlna:
     image: vladgh/minidlna
     container_name: minidlna
